overlapping fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@ nav {
   position: fixed;
   width: 100%;
   top: 0;
+  z-index: 2;
 }
 
 nav a {
@@ -55,6 +56,10 @@ section {
   background-color: #C3D898;
   border-radius: 5px;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+}
+
+audio {
+  z-index: 1;
 }
 
 .subheading {
